<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/document_name"
        android:id="@+id/nameEditText"
        android:textColorHint="@color/black_50"
        android:textColor="@color/black_95" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/document_link"
        android:id="@+id/linkEditText"
        android:textColorHint="@color/black_50"
        android:textColor="@color/black_95" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/button_save_document"
        android:id="@+id/saveDocumentButton" />
</LinearLayout>